--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "bootstrap": "^5.0.1",
+    "react-bootstrap": "^1.6.1",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "formik-material-ui": "^3.0.1",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
